--- a/receiveit-server.service
+++ b/receiveit-server.service
@@ -4,6 +4,8 @@ After=systemd-udev-settle.service local-fs.target
 Requires=systemd-udev-settle.service local-fs.target
 
 [Service]
+ProtectKernelTunables=no
+PrivateDevices=no
 Type=simple
 ExecStart=/usr/bin/python3 /home/receiveit/receiveit-server/main.py
 WorkingDirectory=/home/receiveit/receiveit-server
