start p2p-events only after wpa initializes wlan0

--- a/etc/systemd/system/p2p-events.service
+++ b/etc/systemd/system/p2p-events.service
@@ -2,6 +2,7 @@
 Description=WPA Supplicant Event Listener (Wi-Fi Direct)
 After=network.target p2p-wpa.service
 Requires=p2p-wpa.service
+ConditionPathExists=/var/run/wpa_supplicant/wlan0
 
 [Service]
 Type=simple
