switch to access point approach instead of p2p

--- a/etc/systemd/system/receiveit-server.service
+++ b/etc/systemd/system/receiveit-server.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=ReceiveIt server
-After=systemd-udev-settle.service local-fs.target
+After=systemd-udev-settle.service local-fs.target receiveit-ap.service
 Requires=systemd-udev-settle.service local-fs.target
+Wants=receiveit-ap.service
 
 [Service]
 ProtectKernelTunables=no
