add ble advertisement

--- a/etc/hostapd/hostapd.conf
+++ b/etc/hostapd/hostapd.conf
@@ -2,7 +2,8 @@
 country_code=PL
 interface=wlan0
 driver=nl80211
-ssid=ReceiveIt
+ssid=ReceiveIt_001
+ignore_broadcast_ssid=1
 hw_mode=g
 channel=6
 ieee80211n=1
@@ -13,4 +14,4 @@ auth_algs=1
 wpa=2
 wpa_key_mgmt=WPA-PSK
 rsn_pairwise=CCMP
-wpa_passphrase=receiveit123
+wpa_passphrase=001ReceiveIt
