--- a/etc/hostapd/hostapd.conf
+++ b/etc/hostapd/hostapd.conf
@@ -2,7 +2,7 @@
 country_code=PL
 interface=wlan0
 driver=nl80211
-ssid=WirelessPendrive_001
+ssid=Pendrive_001
 hw_mode=g
 channel=6
 ieee80211n=1
@@ -13,4 +13,4 @@ auth_algs=1
 wpa=2
 wpa_key_mgmt=WPA-PSK
 rsn_pairwise=CCMP
-wpa_passphrase=001WirelessPendrive
+wpa_passphrase=001Pendrive
